--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "myflix-client",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "source": "src/index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "parcel",
+    "build": "parcel build"
   },
   "repository": {
     "type": "git",
@@ -18,11 +20,11 @@
   "homepage": "https://github.com/DarkFather63/myFlix-client#readme",
   "dependencies": {
     "axios": "^0.27.2",
-    "parcel": "^2.6.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.0.0-rc.0"
+    "@parcel/transformer-sass": "^2.6.0",
+    "parcel": "^2.6.0"
   }
 }
