--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "myflix-client",
   "version": "1.0.0",
-  "description": "",
-  "source": "src/index.html",
+  "description": "##About## This is a database app built using MERN stack technology. Parcel is also used to transpile, minify and organize codebase.",
+  "source": "src/index.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel",
@@ -20,13 +20,11 @@
   "homepage": "https://github.com/DarkFather63/myFlix-client#readme",
   "dependencies": {
     "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
-    "react-router-dom": "^5.3.3",
-    "react-router-redux": "^5.0.0-alpha.9"
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
