--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "myflix-client",
   "version": "1.0.0",
   "description": "##About## This is a database app built using MERN stack technology. Parcel is also used to transpile, minify and organize codebase.",
-  "source": "src/index.jsx",
+  "source": "src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel",
@@ -21,10 +21,10 @@
   "dependencies": {
     "axios": "^0.27.2",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
+    "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
-    "react-dom": "^17.0.0",
-    "react-router-dom": "^6.3.0"
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
