--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myflix-client",
   "version": "1.0.0",
-  "description": "##About## Client side of myFlix app, built using MERN stack.",
+  "description": "##About## Client side of myFlix app, built using MERN",
   "default": "src/index.html",
   "scripts": {
     "start": "parcel src/index.html",
@@ -20,12 +20,12 @@
   "homepage": "https://github.com/DarkFather63/myFlix-client#readme",
   "dependencies": {
     "axios": "^0.27.2",
-    "parcel": "^2.0.0-rc.0",
-    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
-    "react-router-dom": "5.2.0"
+    "react-redux": "^8.0.2",
+    "react-router-dom": "5.2.0",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.0.0-rc.0"
