--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "myflix-client",
   "version": "1.0.0",
   "description": "##About## Client side of myFlix app, built using MERN",
-  "main": "src/index.html",
+  "main": "src/index.js",
   "scripts": {
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html",
