--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "parcel": "^2.0.0-rc.0",
+    "prop-types": "8.9.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
@@ -29,7 +30,5 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9"
   },
-  "devDependencies": {
-    "@parcel/transformer-sass": "^2.0.0-rc.0"
-  }
+  "devDependencies": {}
 }
