--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "myflix-client",
   "version": "1.0.0",
   "description": "##About## Client side of myFlix app, built using MERN",
-  "main": "src/index.html",
+  "source": "src/index.html",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html",
+    "build": "parcel src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
